crates/toml_edit/tests/fixtures/invalid/table/duplicate-key-dotted-table2.stderr
TOML parse error at line 4, column 1
  |
4 | [fruit.apple.taste] # INVALID
  | ^
Invalid table header
Duplicate key `apple`
